--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animejs": "^3.1.0",
     "core-js": "^3.3.2",
     "gsap": "^2.1.3",
     "node-sass": "^4.13.0",
