--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animejs": "^3.1.0",
     "core-js": "^3.3.2",
     "gsap": "^2.1.3",
+    "gyronorm": "^2.0.6",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
