--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^2.1.3",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
+    "udn-newmedia-utils": "^1.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
