--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "core-js": "^3.3.2",
+    "detect-inapp": "^1.4.0",
     "gsap": "^2.1.3",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
